[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemies/Ai.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 31.8211

[sub_resource type="CircleShape2D" id=2]
radius = 18.9521

[node name="Ai" type="Node2D"]
script = ExtResource( 1 )

[node name="Alert" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Alert"]
shape = SubResource( 1 )

[node name="Attack Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Range"]
shape = SubResource( 2 )

[node name="LookTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="Alert" to="." method="_on_Alert_body_entered"]
[connection signal="body_exited" from="Alert" to="." method="_on_Alert_body_exited"]
[connection signal="body_entered" from="Attack Range" to="." method="_on_Attack_Range_body_entered"]
[connection signal="body_exited" from="Attack Range" to="." method="_on_Attack_Range_body_exited"]
[connection signal="timeout" from="LookTimer" to="." method="_on_LookTimer_timeout"]
